[tool.poetry]
name = "hone"
version = "0.1.0"
description = "A python-based optimization engine/library."
authors = ["David Beare <rnbeare@gmail.com>"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
